# openclaw-unified-search

./: .gitignore  BUG-REPORT.md  README.md  README_CN.md  README_EN.md  benchmark.py  pyproject.toml  run-with-respawn.sh  search_cli.py  start-all-services.sh  start.sh
.claude/skills/zsc-run-task-group-to-complete/: SKILL.md
.claude/skills/zsc-update-task/: SKILL.md
.codex/skills/zsc-task-status/: SKILL.md
.cursor/skills/zsc-create-task-group/: SKILL.md
.cursor/skills/zsc-run-task-to-complete/: SKILL.md
.cursor/skills/zsc-task-list/: SKILL.md
.opencode/skills/zsc-create-rfc/: SKILL.md
.opencode/skills/zsc-create-task/: SKILL.md
.opencode/skills/zsc-run-task/: SKILL.md
.trae/skills/zsc-help/: SKILL.md
app/: __init__.py  cache.py  config.py  engine.py  main.py  models.py  router.py  version.py
app/engine/: __init__.py  availability.py  intent.py  merger.py  scheduler.py
app/modules/: __init__.py  academic.py  agent_browser.py  base.py  bing.py  brave.py  cdp_pool.py  crossref.py  dblp.py  ddg.py  deepseek.py  devto.py  docs.py  exa.py  fastcode.py  gemini.py  github.py  github_trending.py  glm.py  grok.py  hackernews.py  jina.py  kimi.py  komo.py  meilisearch.py  metaso.py  pdf.py  perplexity.py  phind.py  qwen.py  reddit.py  scnet.py  searxng.py  serper.py  stackoverflow.py  tabbit.py  tavily.py  vane.py  web.py  wiki.py  (+4 more)
docs/: proposal.md  research.md  tasks.md  tasks_new_modules.md  upgrade-v0.3.0-spec.md  upgrade-v0.4.0-spec.md
scripts/: restart.sh  start-docker.sh
tests/: test_engine.py  test_intent.py  test_merger.py  test_search.py
