[project]
name = "unified-search"
version = "0.9.0"
description = "Unified search API for OpenClaw - comprehensive, accurate, and up-to-date information retrieval"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "ddgs>=8.0.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "trafilatura>=2.0.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
